--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "rff is a fast, simple fuzzy text selector for the terminal."
 license = "MIT"
 categories = ["command-line-utilities"]
 exclude = ["benches/*", "ci/*"]
+edition = "2021"
 
 [dependencies]
 clap = "2.33.0"
