--- a/binary/Cargo.toml
+++ b/binary/Cargo.toml
@@ -1,8 +1,5 @@
-[workspace]
-members = ["binary"]
-
 [package]
-name = "rff"
+name = "rff-bin"
 version = "0.3.0"
 authors = ["Andrew Stewart <andrew@stwrt.ca>"]
 homepage = "https://github.com/stewart/rff"
@@ -11,3 +8,15 @@ license = "MIT"
 categories = ["command-line-utilities"]
 exclude = ["benches/*", "ci/*"]
 edition = "2021"
+
+[dependencies]
+clap = "2.33.0"
+libc = "0.2"
+rayon = "1.0.0"
+
+rff = { path = "../" }
+
+[[bin]]
+name = "rff"
+doc = false
+path = "src/main.rs"
